--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:gravity="center"
-              android:background="@android:color/white"
-              android:orientation="vertical">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@android:color/white"
+    android:gravity="center"
+    android:orientation="vertical">
 
     <FrameLayout
         android:layout_width="match_parent"
@@ -17,16 +17,21 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:src="@drawable/biz_video_list_play_icon_big"/>
+            android:src="@drawable/biz_video_list_play_icon_big" />
 
         <com.android.tedcoder.wkvideoplayer.view.SuperVideoPlayer
             android:id="@+id/video_player_item_1"
             android:layout_width="match_parent"
             android:layout_height="200dp"
-            android:visibility="gone">
-        </com.android.tedcoder.wkvideoplayer.view.SuperVideoPlayer>
+            android:visibility="gone"></com.android.tedcoder.wkvideoplayer.view.SuperVideoPlayer>
 
     </FrameLayout>
 
+    <ImageView
+        android:id="@+id/iv_pdf"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:src="@drawable/biz_video_list_play_icon_big" />
 
 </LinearLayout>
