retroal http request

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,7 +3,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/white"
-    android:gravity="center"
     android:orientation="vertical">
 
     <FrameLayout
@@ -27,11 +26,18 @@
 
     </FrameLayout>
 
-    <ImageView
-        android:id="@+id/iv_pdf"
+    <Button
+        android:id="@+id/btn_pdf"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:src="@drawable/biz_video_list_play_icon_big" />
+        android:text="pdf" />
+
+    <Button
+        android:id="@+id/btn_request"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="request" />
 
 </LinearLayout>
