项目结构进行修改

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,6 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@android:color/holo_blue_light"
         android:minHeight="200dp">
 
         <ImageView
@@ -22,7 +21,9 @@
             android:id="@+id/video_player_item_1"
             android:layout_width="match_parent"
             android:layout_height="200dp"
-            android:visibility="gone"></com.android.tedcoder.wkvideoplayer.view.SuperVideoPlayer>
+            android:visibility="gone">
+
+        </com.android.tedcoder.wkvideoplayer.view.SuperVideoPlayer>
 
     </FrameLayout>
 
