--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <!-- 用于橘色按下的效果 -->
     <color name="main_unclick">#ffFFC3A1</color>
     <!-- 用于橘色按钮不可点击 -->
+    <color name="rawmaterial_dark">#ffe4e4e4</color>
+    <color name="rawmaterial_light">#ffffffff</color>
+
+
 </resources>
