--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,29 +5,6 @@
     android:background="@android:color/white"
     android:orientation="vertical">
 
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:minHeight="200dp"
-        android:visibility="gone">
-
-        <ImageView
-            android:id="@+id/play_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:src="@drawable/biz_video_list_play_icon_big" />
-
-        <com.android.tedcoder.wkvideoplayer.view.SuperVideoPlayer
-            android:id="@+id/video_player_item_1"
-            android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:visibility="gone">
-
-        </com.android.tedcoder.wkvideoplayer.view.SuperVideoPlayer>
-
-    </FrameLayout>
-
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
@@ -55,7 +32,7 @@
         android:textSize="14sp" />
 
     <Button
-        android:id="@+id/btn_request"
+        android:id="@+id/btn_setting"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
@@ -67,11 +44,39 @@
         android:textColor="@android:color/white"
         android:textSize="16sp" />
 
-    <Button
-        android:id="@+id/btn_pdf"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="pdf"
-        android:visibility="gone" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@android:color/white"
+        android:orientation="horizontal"
+        android:weightSum="2">
+
+        <Button
+            android:id="@+id/btn_pdf"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:layout_weight="1"
+            android:background="@drawable/selector_white"
+            android:paddingLeft="12dp"
+            android:paddingRight="12dp"
+            android:text="View PDF"
+            android:textColor="@color/common_text"
+            android:textSize="13sp"
+            android:visibility="visible" />
+
+        <Button
+            android:id="@+id/btn_video"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:layout_weight="1"
+            android:background="@drawable/selector_white"
+            android:paddingLeft="12dp"
+            android:paddingRight="12dp"
+            android:text="View VIDEO"
+            android:textColor="@color/common_text"
+            android:textSize="13sp"
+            android:visibility="visible" />
+    </LinearLayout>
 </LinearLayout>
