--- a/app/src/main/res/layout/rawmaterial_line_item.xml
+++ b/app/src/main/res/layout/rawmaterial_line_item.xml
@@ -19,7 +19,9 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center"
-            android:text="@string/material_name" />
+            android:text="@string/material_name"
+            android:textSize="@dimen/title_text_size"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/tv_data_title"
@@ -27,7 +29,9 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center"
-            android:text="@string/material_value" />
+            android:text="@string/material_value"
+            android:textSize="@dimen/title_text_size"
+            android:textStyle="bold" />
 
     </LinearLayout>
 
@@ -44,14 +48,20 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:gravity="center" />
+            android:gravity="center"
+            android:text="A01"
+            android:textSize="@dimen/middle_text_size"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/tv_data_a01"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:gravity="center" />
+            android:gravity="center"
+            android:text="13"
+            android:textSize="@dimen/cell_data_text_size"
+            android:textStyle="italic" />
 
     </LinearLayout>
 
@@ -68,14 +78,18 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:gravity="center" />
+            android:gravity="center"
+            android:textSize="@dimen/middle_text_size"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/tv_data_a02"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:gravity="center" />
+            android:gravity="center"
+            android:textSize="@dimen/cell_data_text_size"
+            android:textStyle="italic" />
 
     </LinearLayout>
 
@@ -92,14 +106,18 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:gravity="center" />
+            android:gravity="center"
+            android:textSize="@dimen/middle_text_size"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/tv_data_a03"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:gravity="center" />
+            android:gravity="center"
+            android:textSize="@dimen/cell_data_text_size"
+            android:textStyle="italic" />
 
     </LinearLayout>
 
@@ -116,14 +134,18 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:gravity="center" />
+            android:gravity="center"
+            android:textSize="@dimen/middle_text_size"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/tv_data_a04"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:gravity="center" />
+            android:gravity="center"
+            android:textSize="@dimen/cell_data_text_size"
+            android:textStyle="italic" />
 
     </LinearLayout>
 
@@ -140,14 +162,18 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:gravity="center" />
+            android:gravity="center"
+            android:textSize="@dimen/middle_text_size"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/tv_data_a05"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:gravity="center" />
+            android:gravity="center"
+            android:textSize="@dimen/cell_data_text_size"
+            android:textStyle="italic" />
 
     </LinearLayout>
 
@@ -164,14 +190,18 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:gravity="center" />
+            android:gravity="center"
+            android:textSize="@dimen/middle_text_size"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/tv_data_a06"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:gravity="center" />
+            android:gravity="center"
+            android:textSize="@dimen/cell_data_text_size"
+            android:textStyle="italic" />
 
     </LinearLayout>
 
@@ -188,14 +218,18 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:gravity="center" />
+            android:gravity="center"
+            android:textSize="@dimen/middle_text_size"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/tv_data_a07"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:gravity="center" />
+            android:gravity="center"
+            android:textSize="@dimen/cell_data_text_size"
+            android:textStyle="italic" />
 
     </LinearLayout>
 
