--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -49,6 +49,7 @@
         android:layout_height="match_parent"
         android:background="@android:color/white"
         android:orientation="horizontal"
+        android:visibility="gone"
         android:weightSum="2">
 
         <Button
