--- a/app/src/main/res/layout/activity_fresco.xml
+++ b/app/src/main/res/layout/activity_fresco.xml
@@ -1,59 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:fresco="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/white"
     android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <com.facebook.drawee.view.SimpleDraweeView
+        android:id="@+id/iv_show_fresco"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="20dp"
-        android:text="配置信息设置"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:textSize="16sp" />
+        android:layout_marginBottom="12dp"
+        android:layout_marginTop="12dp"
+        fresco:placeholderImage="@drawable/ic_launcher" />
 
-    <EditText
-        android:id="@+id/et_host"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:hint="默认host：http://mes.seekersoft.cn/"
-        android:textSize="14sp" />
-
-    <EditText
-        android:id="@+id/et_request_time"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:hint="默认发送一次请求间隔：10秒"
-        android:textSize="14sp" />
-
-    <Button
-        android:id="@+id/btn_setting"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginLeft="12dp"
-        android:layout_marginRight="12dp"
-        android:layout_marginTop="10dp"
-        android:background="@drawable/selector_orange"
-        android:text="设  置"
-        android:textColor="@android:color/white"
-        android:textSize="16sp" />
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:background="@android:color/white"
         android:orientation="horizontal"
         android:visibility="visible"
         android:weightSum="3">
 
         <Button
-            android:id="@+id/btn_pdf"
+            android:id="@+id/btn_gif"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
@@ -61,13 +33,13 @@
             android:background="@drawable/selector_white"
             android:paddingLeft="12dp"
             android:paddingRight="12dp"
-            android:text="View PDF"
+            android:text="View GIF"
             android:textColor="@color/common_text"
             android:textSize="13sp"
             android:visibility="visible" />
 
         <Button
-            android:id="@+id/btn_video"
+            android:id="@+id/btn_jpg"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
@@ -75,7 +47,7 @@
             android:background="@drawable/selector_white"
             android:paddingLeft="12dp"
             android:paddingRight="12dp"
-            android:text="View VIDEO"
+            android:text="View JPG"
             android:textColor="@color/common_text"
             android:textSize="13sp"
             android:visibility="visible" />
