--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -50,7 +50,7 @@
         android:background="@android:color/white"
         android:orientation="horizontal"
         android:visibility="visible"
-        android:weightSum="3">
+        android:weightSum="4">
 
         <Button
             android:id="@+id/btn_pdf"
@@ -76,6 +76,20 @@
             android:paddingLeft="12dp"
             android:paddingRight="12dp"
             android:text="View VIDEO"
+            android:textColor="@color/common_text"
+            android:textSize="13sp"
+            android:visibility="visible" />
+
+        <Button
+            android:id="@+id/btn_sys_video"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:layout_weight="1"
+            android:background="@drawable/selector_white"
+            android:paddingLeft="12dp"
+            android:paddingRight="12dp"
+            android:text="View SYS VIDEO"
             android:textColor="@color/common_text"
             android:textSize="13sp"
             android:visibility="visible" />
