--- a/app/src/main/res/layout/activity_videoplay.xml
+++ b/app/src/main/res/layout/activity_videoplay.xml
@@ -18,16 +18,13 @@
     along with Android-pdfview.  If not, see <http://www.gnu.org/licenses/>.
 
 -->
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="horizontal">
 
-    <com.android.tedcoder.wkvideoplayer.view.SuperVideoPlayer
-        android:id="@+id/video_player_item"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:visibility="visible">
-
-    </com.android.tedcoder.wkvideoplayer.view.SuperVideoPlayer>
-
-</FrameLayout>
+    <VideoView
+        android:id="@+id/video_view"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent" />
+</LinearLayout>
