--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,26 +31,76 @@
         android:hint="默认发送一次请求间隔：10秒"
         android:textSize="14sp" />
 
-    <Button
-        android:id="@+id/btn_setting"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginLeft="12dp"
-        android:layout_marginRight="12dp"
+        android:layout_height="38dp"
         android:layout_marginTop="10dp"
-        android:background="@drawable/selector_orange"
-        android:text="设  置"
-        android:textColor="@android:color/white"
-        android:textSize="16sp" />
+        android:background="@android:color/white"
+        android:orientation="horizontal"
+        android:visibility="visible"
+        android:weightSum="4">
+
+        <Button
+            android:id="@+id/btn_rawmaterial"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="4dp"
+            android:layout_weight="1"
+            android:background="@drawable/selector_orange"
+            android:text="原材料"
+            android:textColor="@android:color/white"
+            android:textSize="14sp" />
+
+        <Button
+            android:id="@+id/btn_semimaterial"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginLeft="4dp"
+            android:layout_marginRight="4dp"
+            android:layout_weight="1"
+            android:background="@drawable/selector_orange"
+            android:text="库位"
+            android:textColor="@android:color/white"
+            android:textSize="14sp" />
+
+        <Button
+            android:id="@+id/btn_three"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginLeft="4dp"
+            android:layout_marginRight="4dp"
+            android:layout_weight="1"
+            android:background="@drawable/selector_orange"
+            android:text="设置"
+            android:textColor="@android:color/white"
+            android:textSize="14sp" />
+
+        <Button
+            android:id="@+id/btn_setting"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginLeft="4dp"
+            android:layout_marginRight="8dp"
+            android:layout_weight="1"
+            android:background="@drawable/selector_orange"
+            android:text="设  置"
+            android:textColor="@android:color/white"
+            android:textSize="14sp" />
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginTop="20dp"
         android:background="@android:color/white"
         android:orientation="horizontal"
-        android:visibility="gone"
-        android:weightSum="4">
+        android:visibility="visible"
+        android:weightSum="5">
 
         <Button
             android:id="@+id/btn_pdf"
@@ -61,7 +111,7 @@
             android:background="@drawable/selector_white"
             android:paddingLeft="12dp"
             android:paddingRight="12dp"
-            android:text="View PDF"
+            android:text="PDF"
             android:textColor="@color/common_text"
             android:textSize="13sp"
             android:visibility="visible" />
@@ -75,7 +125,7 @@
             android:background="@drawable/selector_white"
             android:paddingLeft="12dp"
             android:paddingRight="12dp"
-            android:text="View VIDEO"
+            android:text="VIDEO"
             android:textColor="@color/common_text"
             android:textSize="13sp"
             android:visibility="visible" />
@@ -89,7 +139,21 @@
             android:background="@drawable/selector_white"
             android:paddingLeft="12dp"
             android:paddingRight="12dp"
-            android:text="View SYS VIDEO"
+            android:text="VIDEO"
+            android:textColor="@color/common_text"
+            android:textSize="13sp"
+            android:visibility="visible" />
+
+        <Button
+            android:id="@+id/btn_download"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:layout_weight="1"
+            android:background="@drawable/selector_white"
+            android:paddingLeft="12dp"
+            android:paddingRight="12dp"
+            android:text="Down"
             android:textColor="@color/common_text"
             android:textSize="13sp"
             android:visibility="visible" />
@@ -103,7 +167,7 @@
             android:background="@drawable/selector_white"
             android:paddingLeft="12dp"
             android:paddingRight="12dp"
-            android:text="View Fresco"
+            android:text="Fresco"
             android:textColor="@color/common_text"
             android:textSize="13sp"
             android:visibility="visible" />
