--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -62,7 +62,7 @@
             android:layout_marginRight="4dp"
             android:layout_weight="1"
             android:background="@drawable/selector_orange"
-            android:text="库位"
+            android:text="半成品"
             android:textColor="@android:color/white"
             android:textSize="14sp" />
 
@@ -75,7 +75,7 @@
             android:layout_marginRight="4dp"
             android:layout_weight="1"
             android:background="@drawable/selector_orange"
-            android:text="设置"
+            android:text="等待..."
             android:textColor="@android:color/white"
             android:textSize="14sp" />
 
@@ -88,7 +88,7 @@
             android:layout_marginRight="8dp"
             android:layout_weight="1"
             android:background="@drawable/selector_orange"
-            android:text="设  置"
+            android:text="等待..."
             android:textColor="@android:color/white"
             android:textSize="14sp" />
     </LinearLayout>
