--- a/app/src/main/res/values-w820dp/dimens.xml
+++ b/app/src/main/res/values-w820dp/dimens.xml
@@ -3,4 +3,19 @@
          (such as screen margins) for screens with more than 820dp of available width. This
          would include 7" and 10" devices in landscape (~960dp and ~1280dp respectively). -->
     <dimen name="activity_horizontal_margin">64dp</dimen>
+    <!-- Default screen margins, per the Android Design guidelines. -->
+    <dimen name="activity_vertical_margin">0dp</dimen>
+
+    <!-- PADDINGS -->
+    <dimen name="padding_none">0dp</dimen>
+    <dimen name="padding_small">2dp</dimen>
+    <dimen name="padding_medium">4dp</dimen>
+    <dimen name="padding_extra_large">48dp</dimen>
+
+    <!--字体大小-->
+    <dimen name="title_text_size">22sp</dimen>
+    <dimen name="big_text_size">22sp</dimen>
+    <dimen name="middle_text_size">22sp</dimen>
+    <dimen name="cell_data_text_size">22sp</dimen>
+    <dimen name="small_text_size">22sp</dimen>
 </resources>
