生产看板的内容

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -67,7 +67,7 @@
             android:textSize="14sp" />
 
         <Button
-            android:id="@+id/btn_three"
+            android:id="@+id/btn_allmachine"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -75,7 +75,7 @@
             android:layout_marginRight="4dp"
             android:layout_weight="1"
             android:background="@drawable/selector_orange"
-            android:text="等待..."
+            android:text="生产看板"
             android:textColor="@android:color/white"
             android:textSize="14sp" />
 
