--- a/app/src/main/res/layout/activity_allmachine.xml
+++ b/app/src/main/res/layout/activity_allmachine.xml
@@ -12,13 +12,12 @@
 
     </LinearLayout>
 
-    <LinearLayout
-        android:id="@+id/ll_content"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
 
-    </LinearLayout>
+    <android.support.v4.view.ViewPager
+        android:id="@+id/viewPager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
 </LinearLayout>
 
 
