--- a/app/src/main/res/layout/allmachine_line_item.xml
+++ b/app/src/main/res/layout/allmachine_line_item.xml
@@ -57,13 +57,21 @@
         android:gravity="center"
         android:textSize="@dimen/middle_text_size" />
 
-    <TextView
-        android:id="@+id/tv_08"
+    <LinearLayout
+        android:id="@+id/ll_08"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
-        android:gravity="center"
-        android:textSize="@dimen/middle_text_size" />
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/tv_08"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:text="ssss"
+            android:textSize="@dimen/middle_text_size" />
+    </LinearLayout>
 
 
 </LinearLayout>
