--- a/app/src/main/res/drawable/yellow_shape.xml
+++ b/app/src/main/res/drawable/yellow_shape.xml
@@ -7,6 +7,6 @@
         android:width="1dp"
         android:color="@android:color/white" />
     <size
-        android:width="15dp"
-        android:height="15dp" />
+        android:width="@dimen/cicle_width"
+        android:height="@dimen/cicle_width" />
 </shape>
