--- a/app/src/main/res/values-w820dp/dimens.xml
+++ b/app/src/main/res/values-w820dp/dimens.xml
@@ -12,6 +12,8 @@
     <dimen name="padding_medium">4dp</dimen>
     <dimen name="padding_extra_large">48dp</dimen>
 
+    <dimen name="cicle_width">30dp</dimen>
+
     <!--字体大小-->
     <dimen name="title_text_size">22sp</dimen>
     <dimen name="big_text_size">22sp</dimen>
