--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,6 +8,7 @@
     <dimen name="padding_small">2dp</dimen>
     <dimen name="padding_medium">4dp</dimen>
     <dimen name="padding_extra_large">48dp</dimen>
+    <dimen name="cicle_width">20dp</dimen>
 
     <!--字体大小-->
     <dimen name="title_text_size">16sp</dimen>
