--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -96,7 +96,7 @@
             android:layout_marginRight="8dp"
             android:layout_weight="1"
             android:background="@drawable/selector_orange"
-            android:text="NFC"
+            android:text="..."
             android:textColor="@android:color/white"
             android:textSize="14sp" />
     </LinearLayout>
@@ -108,49 +108,8 @@
         android:background="@android:color/white"
         android:orientation="horizontal"
         android:visibility="visible"
-        android:weightSum="4">
+        android:weightSum="1">
 
-        <Button
-            android:id="@+id/btn_video"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
-            android:layout_weight="1"
-            android:background="@drawable/selector_white"
-            android:paddingLeft="12dp"
-            android:paddingRight="12dp"
-            android:text="VIDEO"
-            android:textColor="@color/common_text"
-            android:textSize="13sp"
-            android:visibility="visible" />
-
-        <Button
-            android:id="@+id/btn_sys_video"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
-            android:layout_weight="1"
-            android:background="@drawable/selector_white"
-            android:paddingLeft="12dp"
-            android:paddingRight="12dp"
-            android:text="VIDEO"
-            android:textColor="@color/common_text"
-            android:textSize="13sp"
-            android:visibility="visible" />
-
-        <Button
-            android:id="@+id/btn_download"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
-            android:layout_weight="1"
-            android:background="@drawable/selector_white"
-            android:paddingLeft="12dp"
-            android:paddingRight="12dp"
-            android:text="Down"
-            android:textColor="@color/common_text"
-            android:textSize="13sp"
-            android:visibility="visible" />
 
         <Button
             android:id="@+id/btn_fresco"
