--- a/app/src/main/res/layout/activity_semimaterial.xml
+++ b/app/src/main/res/layout/activity_semimaterial.xml
@@ -15,8 +15,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:weightSum="9">
+        android:orientation="horizontal"
+        android:weightSum="10">
 
         <LinearLayout
             android:id="@+id/ll_0"
@@ -85,6 +85,14 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:orientation="horizontal" />
+
+        <LinearLayout
+            android:id="@+id/ll_i"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="@color/rawmaterial_light"
             android:orientation="horizontal" />
     </LinearLayout>
 </LinearLayout>
